--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <a href="index.html" class="logo"><img src="img/img_logo_sedona.png" width="137" height="70" alt="city of sedona"></a>
         <nav>
           <ul class="main-navigation">
-            <li class="left first"><a href="#">Информация</a></li>
-            <li class="left second"><a href="#">Фото и видео</a></li>
-            <li class="right third"><a href="#">Карта штата</a></li>
-            <li class="right fourth"><a href="#">Гостиницы</a></li>
+            <li><a href="#">Информация</a></li>
+            <li><a href="#">Фото и видео</a></li>
+            <li><a href="#">Карта штата</a></li>
+            <li><a href="#">Гостиницы</a></li>
           </ul>
         </nav>
       </header>
@@ -42,21 +42,21 @@
             </figure>
           </div>
           <ul class="features clearfix">
-            <li class="feature-housing">
+            <li class="feature-housing feature">
               <h3>Жилье</h3>
               <p>
                 Рекомендуем пожить в настоящем мотеле,
                 все как в кино!
               </p>
             </li>
-            <li class="feature-food">
+            <li class="feature-food feature">
               <h3>Еда</h3>
               <p>
                 Всегда заказывайте фирменный бургер,
                 вы не разочаруетесь!
               </p>
             </li>
-            <li class="feature-souvenirs">
+            <li class="feature-souvenirs feature">
               <h3>Сувениры</h3>
               <p>
                 Не только китайского,
@@ -78,7 +78,7 @@
             </div>
           </div>
           <ul class="reasons-list clearfix">
-            <li class="reasons">
+            <li class="reason">
               <h3>Небольшая площадь</h3>
               <p>- № 3 -</p>
               <p>
@@ -86,7 +86,7 @@
                 находятся очень близко
               </p>
             </li>
-            <li class="reasons">
+            <li class="reason">
               <h3>Красивая дорога</h3>
               <p>- № 4 -</p>
               <p>
@@ -94,7 +94,7 @@
                 не скучно!
               </p>
             </li>
-            <li class="reasons">
+            <li class="reason">
               <h3>Мало туристов</h3>
               <p>- № 5 -</p>
               <p>
@@ -110,48 +110,48 @@
                 Укажите предполагаемые даты поездки,
                 и мы покажем вам лучшие предложения гостиниц в седоне
               </p>
+              <h2 class="search-hotel-sedona">
+                Поиск гостиницы в седоне
+              </h2>
             </header>
-            <div class="hotel-search-content">
+            <form action="" method="post" class="search-form">
+              <label for="check-in">Дата заезда:</label>
+              <div class="date-with-button">
+                <input type="date" id="check-in">
+                <button type="button" class="calendar"></button>
+              </div>
+              <label for="check-out">Дата выезда:</label>
+              <div class="date-with-button">
+                <input type="date" id="check-out">
+                <button type="button" class="calendar"></button>
+              </div>
+              <label for="adults-count">Взрослые:</label>
+              <div class="number-with-button">
+                <button type="button" class="decrease-number"></button>
+                <input type="number" value="2" id="adults-count">
+                <button type="button" class="increase-number"></button>
+              </div>
+              <label for="childrens-count">Дети:</label>
+              <div class="number-with-button">
+                <button type="button" class="decrease-number"></button>
+                <input type="number" value="0" id="childrens-count">
+                <button type="button" class="increase-number"></button>
+              </div>
+              <div class="buttons">
+                <input type="submit" value="Найти">
+              </div>
+            </form>
+            <div class="map-wrapper">
               <img src="img/img_map_index.jpg" width="1200" height="593" alt="map">
-              <form action="" method="post" class="search-form">
-                <h4 class="search-hotel-sedona">
-                  Поиск гостиницы в седоне
-                </h4>
-                <label for="check-in">Дата заезда:</label>
-                <div class="date-with-button">
-                  <input type="date" id="check-in">
-                  <button type="button" class="calendar"></button>
-                </div>
-                <label for="check-out">Дата выезда:</label>
-                <div class="date-with-button">
-                  <input type="date" id="check-out">
-                  <button type="button" class="calendar"></button>
-                </div>
-                <label for="adults-count">Взрослые:</label>
-                <div class="number-with-button">
-                  <button type="button" class="decrease-number"></button>
-                  <input type="number" value="2" id="adults-count">
-                  <button type="button" class="increase-number"></button>
-                </div>
-                <label for="childrens-count">Дети:</label>
-                <div class="number-with-button">
-                  <button type="button" class="decrease-number"></button>
-                  <input type="number" value="0" id="childrens-count">
-                  <button type="button" class="increase-number"></button>
-                </div>
-                <div class="buttons">
-      				    <input type="submit" value="Найти">
-      			    </div>
-              </form>
             </div>
           </div>
         </div>
       </main>
 
-      <footer class="main-footer">
-        <p>
+      <footer class="main-footer main-footer-absolute">
+        <div class="visit_sedona">
           #visitsedona
-        </p>
+        </div>
         <ul class="social">
           <li><a href="#"><i class="social-tw"></i></a></li>
           <li><a href="#"><i class="social-fb"></i></a></li>
